docs/bnf/extended_grammar.bnf
; Extended relational algebra grammar rules.
; Uses rules from core_grammar.bnf.

expression ::= expression | theta_join_expr | intersect_expr

natural_join_expr ::= expression natural_join expression

theta_join_expr ::= expression join param_start conditions param_stop expression

intersect_expr ::= expression intersect expression

; Three-valued logic rules
defined_op ::= "defined"
defined_condition ::= defined_op "(" operand ")"
condition ::= condition | defined_condition

intersect ::= "\\intersect"
natural_join ::= "\\natural_join"
